--- a/_sass/mixin/_font-face.scss
+++ b/_sass/mixin/_font-face.scss
@@ -1,3 +1,5 @@
+@use "sass:map";
+
 // String Replace
 @function str-replace($string, $search, $replace: "") {
 	$index: str-index($string, $search);
