initial default page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,6 @@
   {% include footer.html %}
   <!-- footer end -->
 
-  <script src="../assets/js/editor.js"></script>
+  <script src="{{ '/assets/js/editor.js' | prepend: site.baseurl }}"></script>
 </body>
 </html>
