--- a/_includes/theme/default/editor/reset-css.html
+++ b/_includes/theme/default/editor/reset-css.html
@@ -1,158 +1,16 @@
-<textarea placeholder="Type CSS code here" spellcheck="false" oninput="update(0)" onkeydown="if(event.keyCode===9){var v=this.value,s=this.selectionStart,e=this.selectionEnd;this.value=v.substring(0, s)+'\t'+v.substring(e);this.selectionStart=this.selectionEnd=s+1;return false;}if(event.keyCode==8){update(1);}">
+<textarea id="resetCssCode" placeholder="Type CSS code here" spellcheck="false" oninput="update(0)" onkeydown="if(event.keyCode===9){var v=this.value,s=this.selectionStart,e=this.selectionEnd;this.value=v.substring(0, s)+'\t'+v.substring(e);this.selectionStart=this.selectionEnd=s+1;return false;}if(event.keyCode==8){update(1);}">
+/* VARIABLES
+-------------------------------------*/
 :root{
   --white:#fff;
   --gray:#6c757d;
   --black: #111;
   --primary:#007bff;
   --secondary:#6c757d;
-  --primary-font: "arial";
+  --primary-font: font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-article,aside,figcaption,figure,
-footer,header,hgroup,main,nav,section{
-  display:block
-}
-
-html{
-  font-family:sans-serif;
-  line-height:1.15;
-  -webkit-text-size-adjust:100%;
-  -webkit-tap-highlight-color:transparent
-}
-
-html, body {
-  height: 100%;
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-[tabindex="-1"]:focus:not(:focus-visible){
-  outline:0!important
-}
-
-hr{
-  box-sizing:content-box;
-  height:0;
-  overflow:visible
-}
-
-img, picture, video, canvas, svg {
-  display: block;
-  vertical-align:middle;
-  border-style:none
-  max-width: 100%;
-}
-
-figure{ margin:0 0 1rem }
-
-b,strong{
-  font-weight:bolder
-}
-
-small{
-  font-size:80%
-}
-
-sub,sup{
-  position:relative;
-  font-size:75%;
-  line-height:0;
-  vertical-align:baseline
-}
-
-sub{ bottom:-.25em }
-sup{ top:-.5em }
-
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
-}
-
-table{ border-collapse:collapse }
-th{text-align:inherit}
-
-caption{ 
-  padding-top:.75rem;
-  padding-bottom:.75rem;
-  color:#6c757d;
-  text-align:left;
-  caption-side:bottom
-}
-
-label{ 
-  display:inline-block;
-  margin-bottom:.5rem
-}
-
-button,select{ text-transform:none }
-select{ word-wrap:normal }
-
-button,[type="button"],
-[type="reset"],[type="submit"]{
-  -webkit-appearance:button;
-  -webkit-transition:all 0.4s ease-in-out;
-  transition:all 0.4s ease-in-out;
-}
-
-button:not(:disabled),[type="button"]:not(:disabled),
-[type="reset"]:not(:disabled),[type="submit"]:not(:disabled){ cursor:pointer }
-
-button::-moz-focus-inner,[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{ padding:0;border-style:none }
-
-input[type="radio"],input[type="checkbox"]{ box-sizing:border-box;padding:0 }
-
-input[type="date"],input[type="time"],
-input[type="datetime-local"],input[type="month"]{ -webkit-appearance:listbox }
-
-textarea{ overflow:auto; resize:vertical }
-
-fieldset{
-  min-width:0;
-  padding:0;
-  margin:0;
-  border:0
-}
-
-legend{
-  display:block;
-  width:100%;
-  max-width:100%;
-  padding:0;
-  margin-bottom:.5rem;
-  font-size:1.5rem;
-  line-height:inherit;
-  color:inherit;
-  white-space:normal
-}
-
-progress{ vertical-align:baseline }
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button{ height:auto }
-
-[type="search"]{ outline-offset:-2px; -webkit-appearance:none }
-[type="search"]::-webkit-search-decoration{ -webkit-appearance:none }
-
-::-webkit-file-upload-button{ font:inherit; -webkit-appearance:button }
-
-output{display:inline-block}
-summary{display:list-item;cursor:pointer}
-template{display:none}
-[hidden]{display:none!important}
-
-a, input, button, textarea, select {
-  font: inherit;
-  outline:0;
-}
-
-#root, #__next {
-  isolation: isolate;
-}
+/* NORMALIZE
+-------------------------------------*/
+*,*::before,*::after{box-sizing:border-box}article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:block}html{font-family:sans-serif;line-height:1.15;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent}html,body{height:100%} body{line-height:1.5;font-synthesis: none;text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;}[tabindex="-1"]:focus:not(:focus-visible){outline:0!important}hr{box-sizing:content-box;height:0;overflow:visible}img,picture,video,canvas,svg{display:block;vertical-align:middle;border-style:none max-width:100%}figure{margin:0 0 1rem}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{position:relative;font-size:75%;line-height:0;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}p,h1,h2,h3,h4,h5,h6{overflow-wrap:break-word}table{border-collapse:collapse}th{text-align:inherit}caption{padding-top:.75rem;padding-bottom:.75rem;color:#6c757d;text-align:left;caption-side:bottom}label{display:inline-block;margin-bottom:.5rem}button,select{text-transform:none}select{word-wrap:normal}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button;-webkit-transition:all 0.4s ease-in-out;transition:all 0.4s ease-in-out}button:not(:disabled),[type="button"]:not(:disabled),[type="reset"]:not(:disabled),[type="submit"]:not(:disabled){cursor:pointer}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{padding:0;border-style:none}input[type="radio"],input[type="checkbox"]{box-sizing:border-box;padding:0}input[type="date"],input[type="time"],input[type="datetime-local"],input[type="month"]{-webkit-appearance:listbox}textarea{overflow:auto;resize:vertical}fieldset{min-width:0;padding:0;margin:0;border:0}legend{display:block;width:100%;max-width:100%;padding:0;margin-bottom:.5rem;font-size:1.5rem;line-height:inherit;color:inherit;white-space:normal}progress{vertical-align:baseline}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{outline-offset:-2px;-webkit-appearance:none}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{font:inherit;-webkit-appearance:button}output{display:inline-block}summary{display:list-item;cursor:pointer}template{display:none}[hidden]{display:none!important}a,input,button,textarea,select{font:inherit;outline:0}#root,#__next{isolation:isolate}
 </textarea>
