default page update

--- a/_includes/theme/default/editor/editor.html
+++ b/_includes/theme/default/editor/editor.html
@@ -1,11 +1,11 @@
-<div id="tab3"  class="tab-content reset-css-block active">
+<div id="tab3"  class="tab-content reset-css-block">
     <div class="editor-utility-nav">
         <span class="copy fa fa-clipboard" title="Copy Code"></span>
         <span class="clear fa fa-trash-o" title="Clear Editor"></span>
     </div>
     {% include theme/default/editor/reset-css.html %}
 </div>
-<div id="tab4" class="tab-content default-css-block">
+<div id="tab4" class="tab-content default-css-block active">
     <div class="editor-utility-nav">
         <span class="copy fa fa-clipboard" title="Copy Code"></span>
         <span class="clear fa fa-trash-o" title="Clear Editor"></span>
