--- a/_includes/theme/default/editor/editor-options.html
+++ b/_includes/theme/default/editor/editor-options.html
@@ -1,7 +1,7 @@
 <div class="editor-options--left">
 	<nav class="visual--tabs">
-        <div class="tab-item active"><a href="#tab3">Reset CSS</a></div>
-        <div class="tab-item"><a href="#tab4">Default CSS</a></div>
+        <div class="tab-item"><a href="#tab3">Reset CSS</a></div>
+        <div class="tab-item active"><a href="#tab4">Default CSS</a></div>
     </nav>
 </div>
 <div class="editor-options--right">
