default page update

--- a/_includes/theme/default/editor/default-css.html
+++ b/_includes/theme/default/editor/default-css.html
@@ -12,7 +12,7 @@ body{
 -----------------------------------------------*/
 h1, .h1{
     font-size: 40px;
-    line-height: 1;
+    line-height: 1.25;
     font-weight: bold;
     color: #111;
     font-family: 'Arial', sans-serif;
@@ -24,7 +24,7 @@ h2, .h2{
     font-weight: bold;
     color: #111;
     font-family: 'Arial', sans-serif;
-    margin: 0 0 15px 0;
+    margin: 45px 0 10px 0;
 }
 h3, .h3{
     font-size: 30px;
@@ -32,7 +32,7 @@ h3, .h3{
     font-weight: bold;
     color: #111;
     font-family: 'Arial', sans-serif;
-    margin: 0 0 5px 0;
+     margin: 45px 0 10px 0;
 }
 h4, .h4{
     font-size: 20px;
@@ -40,7 +40,7 @@ h4, .h4{
     font-weight: bold;
     color: #111;
     font-family: 'Arial', sans-serif;
-    margin: 0 0 5px 0;
+     margin: 45px 0 10px 0;
 }
 h5, .h5{
     font-size: 16px;
@@ -48,7 +48,7 @@ h5, .h5{
     font-weight: bold;
     color: #111;
     font-family: 'Arial', sans-serif;
-    margin: 0 0 5px 0;
+    margin: 35px 0 5px 0;
 }
 h6, .h6{
     font-size: 14px;
@@ -56,15 +56,16 @@ h6, .h6{
     font-weight: bold;
     color: #111;
     font-family: 'Arial', sans-serif;
-    margin: 0 0 5px 0;
+     margin: 35px 0 5px 0;
 }
 
 /*  TAGS
 -----------------------------------------------*/
 p{
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.65;
     font-family: 'Arial', sans-serif;
+    color: #777;
     margin: 0 0 25px 0;
 }
 p:last-child{
@@ -154,7 +155,8 @@ ul{
 ul li,
 ol li {
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.65;
+    color: #777;
     font-family: 'Arial', sans-serif;
     margin: 0 0 25px 0;
 }
@@ -171,6 +173,7 @@ dl{
     flex-wrap: wrap;
     gap: 10px;
     font-family: 'Arial', sans-serif;
+    margin: 0 0 25px 0;
 }
 dl dt{
     flex: 0 0 25%;
@@ -192,17 +195,21 @@ dl dd{
 table{
     border-collapse: collapse;
     width: 100%;
+    margin: 0 0 25px 0;
 }
 table td, 
 table th {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 15px 10px;
+    font-size: 16px;
+    line-height: 1.65;
+    color: #777;
 }
 table tr:nth-child(even){
     background-color: #f2f2f2;
 }
 table tr:hover {
-    background-color: #ddd;
+    background-color: #f7f7f7;
 }
 table th {
     padding-top: 12px;
@@ -211,4 +218,5 @@ table th {
     background-color: orange;
     color: white;
 }    
+
 </textarea>
