default page update

--- a/_includes/theme/default/visual/visual-element.html
+++ b/_includes/theme/default/visual/visual-element.html
@@ -65,7 +65,7 @@
 
 <div class="block-space">
     <div class="title">Quote</div>
-    <blockquote></blockquote>
+    <blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</blockquote>
 </div>
 
 <div class="block-space">
