--- a/_includes/theme/default/visual/visual-content.html
+++ b/_includes/theme/default/visual/visual-content.html
@@ -46,6 +46,10 @@
 
 <p contenteditable>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
+<blockquote contenteditable>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</blockquote>
+
+<p contenteditable>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
 <table contenteditable>
     <tr>
         <th>Lorem Ipsum is simply dummy text</th>
